# Loop-TTT

./: .gitignore  BRIEFING.md  CLAUDE.md  IDEAS.md  IDEAS_100.md  IDEAS_R2.md  IDEAS_R3.md  IDEAS_R4.md  NODE2_KICKOFF.md  NODE_QUEUE.md  README.md  RESULTS.md  experiment_queue.md  initial_instruction.md
lact/: CLAUDE.md  (+2 more)
related_work/deja_view/dvlt/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  pyproject.toml
related_work/deja_view/dvlt/docs/: CONTRIB.md  INSTALL.md  TESTING.md
related_work/deja_view/dvlt/docs/data/: DATA.md
related_work/deja_view/dvlt/src/dvlt/callbacks/: __init__.py  base.py  logging.py  util.py  visualization.py
related_work/deja_view/dvlt/src/dvlt/callbacks/evaluators/: __init__.py  base.py  depth.py  pointmap.py  pose.py
related_work/deja_view/dvlt/src/dvlt/common/: amp.py  constants.py  io.py  pose.py  projection.py  rotation.py
related_work/deja_view/dvlt/src/dvlt/common/numpy/: rotation.py
related_work/deja_view/dvlt/src/dvlt/config/: cli.py  completion.py
related_work/deja_view/dvlt/src/dvlt/config/experiments/: da3-base.yaml  da3-giant.yaml  da3-large.yaml  default.yaml  dvlt-large-ablation-decoupled.yaml  dvlt-large-ablation.yaml  dvlt-large-depthconv-stage2.yaml  dvlt-large.yaml  dvlt.yaml  mapanything.yaml  pi3.yaml  pi3x.yaml  vggt.yaml  vggt_omega.yaml
related_work/deja_view/dvlt/src/dvlt/data/: collate.py  loader.py  module.py  sampler.py
related_work/deja_view/dvlt/src/dvlt/data/datasets/: eval.py  multi_source.py  train.py  util.py
related_work/deja_view/dvlt/src/dvlt/data/sources/: __init__.py
related_work/deja_view/dvlt/src/dvlt/engine/: profiler.py  progress.py  scheduler.py  trainer.py
related_work/deja_view/dvlt/src/dvlt/metric/: intrinsic.py  util.py
related_work/deja_view/dvlt/src/dvlt/model/: base.py
related_work/deja_view/dvlt/src/dvlt/model/da3/: model.py
related_work/deja_view/dvlt/src/dvlt/model/dvlt/: blocks.py  depth_scaling.py  heads.py  model.py
related_work/deja_view/dvlt/src/dvlt/model/mapanything/: model.py
related_work/deja_view/dvlt/src/dvlt/model/pi3/: model.py
related_work/deja_view/dvlt/src/dvlt/model/vggt/: model.py
related_work/deja_view/dvlt/src/dvlt/model/vggt_omega/: model.py
related_work/deja_view/dvlt/src/dvlt/model_components/: __init__.py  dinov2.py  head_activations.py
related_work/deja_view/dvlt/src/dvlt/model_components/layers/: attention.py  block.py  patch_embed.py  rope.py  swiglu_ffn.py
related_work/deja_view/dvlt/src/dvlt/model_components/loss/: camera.py  common.py  depth.py  util.py
related_work/deja_view/dvlt/src/dvlt/scripts/: gradio_demo.py  test.py  train.py  visualize.py
related_work/deja_view/dvlt/src/dvlt/scripts/preprocess/: preprocess_7scenes.md  preprocess_eth3d.md  preprocess_nuscenes.md  (+1 more)
related_work/deja_view/dvlt/src/dvlt/struct/: cameras.py  rays.py  tensor.py  util.py
related_work/deja_view/dvlt/src/dvlt/util/: download.py  model_registry.py  preprocess.py  sanity_check.py  skyseg.py
related_work/deja_view/dvlt/src/dvlt/viz/: camera_overlay.py  depth.py  glb.py  scene_plotly.py  scene_rerun.py  util.py
related_work/deja_view/dvlt/tests/: __init__.py  conftest.py  run_tests.py
related_work/deja_view/dvlt/tests/callbacks/: test_evaluators.py  test_logging.py
related_work/deja_view/dvlt/tests/common/: __init__.py  test_geometry.py  test_io.py  test_poses.py  test_projection.py  test_rays.py  test_rotation.py
related_work/deja_view/dvlt/tests/common/numpy/: test_numpy_rotation.py
related_work/deja_view/dvlt/tests/config/: __init__.py  test_schema.py
related_work/deja_view/dvlt/tests/data/: __init__.py  test_distributed_integration.py  test_integration.py  test_loader.py  test_sampler.py
related_work/deja_view/dvlt/tests/data/datasets/: __init__.py  test_eval.py  test_multi_source.py  test_train.py
related_work/deja_view/dvlt/tests/engine/: __init__.py  test_integration.py  test_progress.py
related_work/deja_view/dvlt/tests/metric/: __init__.py  test_pointcloud.py  test_pose.py
related_work/deja_view/dvlt/tests/model/: __init__.py  test_base.py
related_work/deja_view/dvlt/tests/model_components/: __init__.py
related_work/deja_view/dvlt/tests/model_components/heads/: __init__.py
related_work/deja_view/dvlt/tests/structures/: __init__.py  test_cameras.py  test_rays.py
related_work/deja_view/dvlt/tests/utils/: __init__.py  fixtures.py
(+10827 files in other folders)
